Fix position and z-index in IE11

--- a/src/stylesheets/sass/body/body.sass
+++ b/src/stylesheets/sass/body/body.sass
@@ -1,4 +1,3 @@
 .body
 	position: relative
-	z-index: -999
 	overflow-x: hidden
