--- a/src/stylesheets/sass/head-block/head-block.sass
+++ b/src/stylesheets/sass/head-block/head-block.sass
@@ -14,8 +14,9 @@
 		position: absolute
 		width: 716px
 		height: 948px
-		margin-top: 261px
+		top: 261px
 		// margin-left: 427px
-		+make-col-offset(5)
+		//+make-col-offset(5)
+		left: (5 / 12 * 100%)
 		background: no-repeat url(../images/header/iPhone.png)
 		//margin-top: 452px
