--- a/src/stylesheets/sass/main/main.sass
+++ b/src/stylesheets/sass/main/main.sass
@@ -5,6 +5,5 @@
 	overflow: hidden
 	position: relative
 	// top: -41 - 56px
-	z-index: -1
 	//position: relative
 	//overflow-x: hidden
